syntax = "proto3";

package erda.oap.metrics;

option go_package = "github.com/erda-project/erda-proto-go/oap/metrics/pb";

import "google/protobuf/struct.proto";
import "oap/common/common.proto";

// The metrics data model 
//   of the observability analysis platform.
message Metric {

    string name = 1;

    fixed64 timeUnixNano = 2;

    // Store trace and resource pointer
    oap.common.Relation relations = 3;

    // Including label, attributes and resource 
    map<string, string> attributes = 4;

    // Multi data points
    // The data point can be the original value or the aggregated value 
    map<string, google.protobuf.Value> dataPoints  = 5;
}